fixing wrapping of the main button

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -178,7 +178,7 @@ header {
                 font-weight: 300;
                 font-size: 16px;
                 margin-bottom: 50px;
-                font-weight: inherit;
+                // font-weight: inherit;
                 color: white;
             }
         }
