--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3067,6 +3067,7 @@ fieldset[disabled] .btn-default.active {
   color: #fff;
   background-color: #337ab7;
   border-color: #2e6da4;
+  white-space: pre-wrap;
 }
 .btn-primary:hover,
 .btn-primary:focus,
